fix: about text align

--- a/styles/style.css
+++ b/styles/style.css
@@ -399,6 +399,7 @@ main {
       & p {
         font-family: "Roboto", sans-serif;
         font-weight: 500;
+        text-align: justify;
       }
 
       & .about-links {
